--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
     "vite": "^5.0.0",
+    "vite-plugin-node-polyfills": "^0.24.0",
     "vitest": "^4.0.16"
   }
 }
